---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/filter.txt

---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Filter {
                    name: "baz",
                    expr: Some(
                        Filter {
                            name: "bar",
                            expr: Some(
                                Var {
                                    id: "foo",
                                } @ 1:3-1:6,
                            ),
                            args: [
                                Const {
                                    value: 1,
                                } @ 1:11-1:12,
                                Const {
                                    value: 2,
                                } @ 1:14-1:15,
                            ],
                        } @ 1:7-1:16,
                    ),
                    args: [],
                } @ 1:17-1:20,
            } @ 1:0-1:20,
        ],
    } @ 0:0-1:23,
)
